--- a/client/index.html
+++ b/client/index.html
@@ -28,15 +28,32 @@
     </nav>
  </section>  
 
- <section class="carousel-container">
-    <div class="carousel" id="carousel">
-      <img src=".\images\img1.jpg" alt="Slide 1" class="carousel-slide active">
-      <img src=".\images\img2.jpg" alt="Slide 2" class="carousel-slide">
-      <img src=".\images\img3.jpg" alt="Slide 3" class="carousel-slide">
-      <button class="carousel-btn prev" onclick="changeSlide(-1)">&#10094;</button>
-      <button class="carousel-btn next" onclick="changeSlide(1)">&#10095;</button>
+<!--Carousel-->
+<section >
+   <div class="carousel-container">
+    <div class="carousel">
+      <div class="carousel-slide active">
+        <img src=".\images\img1.jpg" alt="Slide 1">
+      </div>
+      <div class="carousel-slide">
+        <img src=".\images\img2.jpg" alt="Slide 2">
+      </div>
+      <div class="carousel-slide">
+        <img src=".\images\img3.jpg" alt="Slide 3">
+      </div>
     </div>
+    
+    <button class="carousel-btn prev">&#10094;</button>
+    <button class="carousel-btn next">&#10095;</button>
+    
+    <div class="carousel-indicators">
+      <span class="indicator active" data-slide="0"></span>
+      <span class="indicator" data-slide="1"></span>
+      <span class="indicator" data-slide="2"></span>
+    </div>
+  </div>
 </section>
+ 
  
   <script src="style.js"></script>
 </body>
