--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
         <a href="#">Home</a>
         <a href="#">Players</a>
         <a href="#">Matches</a>
-        <a href="#">Standings</a>
-        <a href="#">Gallery</a>
+        <a href="#">About</a>
         </div>
     </nav>
  </section>  
 
 <!--Carousel-->
-<section >
+<section class="py-lg-5">
    <div class="carousel-container">
     <div class="carousel">
       <div class="carousel-slide active">
@@ -48,7 +47,7 @@
     <button class="carousel-btn prev">&#10094;</button>
     <button class="carousel-btn next">&#10095;</button>
     
-    <div class="carousel-indicators">
+    <div class="carousel-indicators ">
       <span class="indicator active" data-slide="0"></span>
       <span class="indicator" data-slide="1"></span>
       <span class="indicator" data-slide="2"></span>
@@ -109,7 +108,7 @@
                         <img src="https://images.unsplash.com/photo-1574629810360-7efbbe195018?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" 
                              class="card-img-top player-img" alt="Player 1">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Alex Morgan</h4>
+                            <h4 class="card-title">Troy</h4>
                             <span class="position-tag mb-2">Forward</span>
                             <div class="stats">
                                 <p class="mb-0"><strong>Matches Played:</strong> 142</p>
@@ -124,7 +123,7 @@
                         <img src="https://images.unsplash.com/photo-1543351611-58f69d7c1781?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" 
                              class="card-img-top player-img" alt="Player 2">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Jamie Carter</h4>
+                            <h4 class="card-title">Tiv</h4>
                             <span class="position-tag mb-2">Midfielder</span>
                             <div class="stats">
                                 <p class="mb-0"><strong>Matches Played:</strong> 187</p>
@@ -139,7 +138,7 @@
                         <img src="https://images.unsplash.com/photo-1519861531473-9200262188bf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" 
                              class="card-img-top player-img" alt="Player 3">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Sam Wilson</h4>
+                            <h4 class="card-title">Shaq</h4>
                             <span class="position-tag mb-2">Goalkeeper</span>
                             <div class="stats">
                                 <p class="mb-0"><strong>Matches Played:</strong> 203</p>
@@ -173,7 +172,7 @@
                         <div class="col-md-5 text-end">
                             <div class="d-flex align-items-center justify-content-end">
                                 <div class="text-end me-3">
-                                    <h5 class="mb-1">Toronto Sticks</h5>
+                                    <h5 class="mb-1">Saints</h5>
                                     <div>
                                         <span class="badge badge-win me-1">Win</span>
                                         <span class="badge badge-penalty">2 Penalties</span>
@@ -192,7 +191,7 @@
                             <div class="d-flex align-items-center">
                                 <img src="https://via.placeholder.com/60x60?text=MH" alt="Team Logo" class="team-logo me-3">
                                 <div>
-                                    <h5 class="mb-1">Montreal Hawks</h5>
+                                    <h5 class="mb-1">GCC</h5>
                                     <div>
                                         <span class="badge badge-loss">Loss</span>
                                     </div>
@@ -227,7 +226,7 @@
                         <div class="col-md-5 text-end">
                             <div class="d-flex align-items-center justify-content-end">
                                 <div class="text-end me-3">
-                                    <h5 class="mb-1">Vancouver Waves</h5>
+                                    <h5 class="mb-1">Old fort</h5>
                                     <div>
                                         <span class="badge badge-draw me-1">Draw</span>
                                         <span class="badge badge-penalty">1 Penalty</span>
@@ -246,7 +245,7 @@
                             <div class="d-flex align-items-center">
                                 <img src="https://via.placeholder.com/60x60?text=TS" alt="Team Logo" class="team-logo me-3">
                                 <div>
-                                    <h5 class="mb-1">Toronto Sticks</h5>
+                                    <h5 class="mb-1">Hikers</h5>
                                     <div>
                                         <span class="badge badge-draw">Draw</span>
                                     </div>
